feat: package name change

--- a/e2e/esbuild-cjs/tsconfig.json
+++ b/e2e/esbuild-cjs/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "paths": {
-      "electron-log/*": ["../../*"]
+      "log-electron/*": ["../../*"]
     },
   },
   "include": ["src"]
