--- a/e2e/esbuild-esm/tsconfig.json
+++ b/e2e/esbuild-esm/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "paths": {
-      "electron-log/*": ["../../*"]
+      "log-electron/*": ["../../*"]
     },
     "outDir": "dist",
   },
