--- a/e2e/node/package.json
+++ b/e2e/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-log-test-node",
+  "name": "log-electron-test-node",
   "version": "1.0.0",
   "private": true,
   "scripts": {
