--- a/e2e/nwjs/package.json
+++ b/e2e/nwjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-log-test-nwjs",
+  "name": "log-electron-test-nwjs",
   "version": "1.0.0",
   "private": true,
   "main": "index.html",
